--- a/projectsite/templates/includes/org_list.html
+++ b/projectsite/templates/includes/org_list.html
@@ -50,8 +50,10 @@
                                     <td>{{ object.name }}</td>
                                     <td>{{ object.college }}</td>
                                     <td>{{ object.description }}</td>
-                                    <td> <a href="{% url 'organization-update' object.id %}">Edit</a>
-                                        </td>
+                                    <td>
+                                        <a href="{% url 'organization-update' object.id %}">Edit</a>
+                                        <a href="{% url 'organization-delete' object.id %}" class="text-danger">Delete</a>
+                                    </td>
                                     </tr>
                                     {% empty %}
                                     <tr>
