--- a/projectsite/templates/includes/base.html
+++ b/projectsite/templates/includes/base.html
@@ -188,7 +188,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="#">
+							<a href="{% url 'student-list' %}">
 								<i class="la la-th"></i>
 								<p>Student</p>
 							</a>
@@ -200,9 +200,9 @@
 							</a>
 						</li>
 						<li class="nav-item active">
-							<a href="typography.html">
+							<a href="{% url 'program-list' %}">
 								<i class="la la-font"></i>
-								<p>Typography</p>
+								<p>Program</p>
 								<span class="badge badge-danger">25</span>
 							</a>
 						</li>
